fix : text-align 으로 배열 깨지는 문제 해결

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -67,7 +67,6 @@
 
     .right-column {
       width: 100%;
-      text-align: center;
     }
   }
 }
